kubernetes-security/psa_restricted_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: psa-restricted
  labels: 
    pod-security.kubernetes.io/enforce: restricted
