kubernetes-security/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homework
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: homework
  name: webserver
  labels:
    app: welcome
    tier: webserver
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  selector:
    matchLabels:
      tier: webserver
      app: webserversel
  template:
    metadata:
      labels:
        tier: webserver
        app: webserversel
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/homework
                    operator: In
                    values:
                      - "true"

      serviceAccountName: monitoring
      containers:
      - name: otus-firs-hw
        image: docker.angie.software/angie:1.10.0
        ports:
        - name: webserver-port
          containerPort: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: webserver-port
          failureThreshold: 30
          periodSeconds: 3
        lifecycle:
          postStart:
            exec:
              command: [ "sh", "-c", "/opt/checkMetrics.sh" ]
          preStop:
            exec:
              command: [ "sh", "-s", "rm -f /homework/index.html" ]
        volumeMounts:
          - mountPath: /homework
            name: shared-volume
          - name: angie-config
            mountPath: /etc/angie/angie.conf
            subPath: angie.conf
          - name: angie-config
            mountPath: /etc/angie/http.d/default.conf
            subPath: default.conf
          - name: check-metrics
            mountPath: /opt/checkMetrics.sh
            subPath: checkMetrics.sh
          - name: angie-cache
            mountPath: /var/cache/angie/

        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
          runAsUser: 2000
          runAsGroup: 3000
          seccompProfile:
            type: RuntimeDefault

      volumes:
        - name: shared-volume
          emptyDir:
            sizeLimit: 5Mi
        - name: check-metrics
          projected:
            sources:
            - configMap:
                name: check-metrics
                items:
                - key:  checkMetrics.sh
                  path: checkMetrics.sh
                  mode: 0755

        - name: angie-config
          configMap:
            name: angie-config
        - name: angie-cache
          emptyDir:
            sizeLimit: 5Mi
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  namespace: homework
spec:
  selector:
    app: webserversel
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /homepage(/$|$)
        pathType: ImplementationSpecific
        backend:
          service:
            name: webserver-service
            port:
              number: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress-m
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /metrics.html
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /metrics(/$|$)
        pathType: ImplementationSpecific
        backend:
          service:
            name: webserver-service
            port:
              number: 5000
